# nicegui_test

./: .gitignore  README.md  pyproject.toml
nicegui_test/: __main__.py  borders.py  customize.py  proc.py
nicegui_test/data_views/: details.py  list.py
nicegui_test/frontend/: borders.py  customize.py  data_stuff.py  random_stuff.py
nicegui_test/frontend/data_views/: details.py  list.py
nicegui_test/frontend/proc_control/: details.py  list.py  nursery.py
nicegui_test/procs/: lisp_math.py
tests/: test_lisp_math.py
