[tool.poetry]
name = "nicegui-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "nicegui_test"}]

[tool.poetry.dependencies]
python = "~3.11"
nicegui = "^1.3.4"
aioconsole = "^0.6.1"
typer = {extras = ["all"], version = "^0.9.0"}
aiofiles = "^23.1.0"

[tool.poetry.scripts]
streamer = "nicegui_test.streamer:run"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
